# demo-apartmentrental

./: .env.defaults  .env.docker  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  mypy.ini  poetry.toml  pyproject.toml
src/: manage.py
src/apartmentrentals/: asgi.py  urls.py  wsgi.py
src/apartmentrentals/settings/: __init__.py  base.py  config.py  database.py  logging.py
src/api/: admin.py  api.py  apps.py  models.py  permissions.py  schemas.py  settings.py  signals.py
src/api/controllers/: __init__.py  apartment.py  realtor.py  registration.py
src/api/management/commands/: bootstrap.py  create-fake-data.py
src/api/migrations/: 0001_add_realtor_group.py  0002_initial.py  0003_rename_apartment_area_rooms_no_price_month_price_month_currency_api_apartme_area_2a50a4_idx_and_more.py
src/tests/: conftest.py
src/tests/test_api/: helpers.py  test_apartment_controller.py  test_realtor_controller.py  test_registration_controller.py  test_signals.py
